--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,27 @@
     border-color: #e3e3e3;
 }
 
-.image-text {
+.font-18 {
     font-size: 18px;
+}
+
+#carousel {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.carousel .carousel-item {
+    height: 600px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    min-height: 600px;
+}
+
+.carousel-caption > h5, .carousel-caption > p {
+    color: black;
 }
