--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 #page-title {
     background-color: #e3e3e3;
     border-color: #e3e3e3;
@@ -10,20 +15,48 @@
 #carousel {
     margin-top: 100px;
     margin-bottom: 100px;
-}
-
-.carousel .carousel-item {
-    height: 600px;
-}
-
-.carousel-item img {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    min-height: 600px;
+    width: 100%;
 }
 
 .carousel-caption > h5, .carousel-caption > p {
     color: black;
+}
+
+#partners-container {
+    margin: 100px 0;
+}
+
+#partners-section {
+    height: 150px;
+}
+
+#form-container {
+    width: 80%;
+}
+
+#form-button {
+    background-color: #e3e3e3;
+    border: 2px solid #a3a2a2;
+}
+
+#form-button:hover {
+    background-color: #a3a2a2;
+}
+
+footer {
+    background-color: #e3e3e3;
+}
+
+#footer-lists-container {
+    margin-bottom: 75px;
+}
+
+.footer-list-item > a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.footer-list-item > a:hover {
+    color: #8a8a8a;
 }
